--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,12 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^1.0.6",
+    "axios": "^1.3.4",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
+    "react-toastify": "^9.1.1",
     "swiper": "^9.1.0"
   },
   "devDependencies": {
