--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,9 @@
     "axios": "^1.3.4",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2",
+    "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.1",
     "swiper": "^9.1.0"
   },
