--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^1.0.6",
+    "@react-oauth/google": "^0.9.0",
     "axios": "^1.3.4",
     "formik": "^2.2.9",
     "react": "^18.2.0",
@@ -22,7 +24,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.1",
-    "swiper": "^9.1.0"
+    "swiper": "^9.1.0",
+    "typeface-roboto": "^1.1.13"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
