--- a/admin/package.json
+++ b/admin/package.json
@@ -12,6 +12,7 @@
     "@popperjs/core": "^2.11.6",
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
+    "firebase": "^9.19.1",
     "formik": "^2.2.9",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
