--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,13 @@
     "@heroicons/react": "^1.0.6",
     "@react-oauth/google": "^0.9.0",
     "axios": "^1.3.4",
+    "firebase": "^9.19.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.1",
     "swiper": "^9.1.0",
