--- a/theater/package.json
+++ b/theater/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
     "formik": "^2.2.9",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
+    "react-select": "^5.7.2",
     "react-toastify": "^9.1.2"
   },
   "devDependencies": {
