--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
@@ -16,17 +18,26 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^1.0.6",
+    "@material-tailwind/react": "^1.4.2",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/styles": "^4.11.5",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.12",
+    "@mui/styled-engine-sc": "^5.11.11",
     "@react-oauth/google": "^0.9.0",
     "axios": "^1.3.4",
     "firebase": "^9.19.1",
     "formik": "^2.2.9",
+    "lottie-web": "^5.11.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-lottie": "^1.2.3",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.1",
+    "styled-components": "^5.3.9",
     "swiper": "^9.1.0",
     "typeface-roboto": "^1.1.13"
   },
