--- a/theater/package.json
+++ b/theater/package.json
@@ -15,6 +15,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.1.5",
     "react-router-dom": "^6.9.0",
     "react-select": "^5.7.2",
     "react-toastify": "^9.1.2"
