--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@mui/material": "^5.11.12",
     "@mui/styled-engine-sc": "^5.11.11",
     "@react-oauth/google": "^0.9.0",
+    "@stripe/react-stripe-js": "^2.1.0",
     "axios": "^1.3.4",
     "firebase": "^9.19.1",
     "formik": "^2.2.9",
@@ -38,6 +39,7 @@
     "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.9",
+    "sweetalert": "^2.1.2",
     "swiper": "^9.1.0",
     "typeface-roboto": "^1.1.13"
   },
